Fix TMDB logo not visible in the footer

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -43,6 +43,10 @@
     max-width: 150px;
 }
 
+.CreditsIcon svg {
+    width: 100%;
+}
+
 @media (min-width: 768px) {
     .FooterContent {
         flex-direction: row;
