--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,5 +1,6 @@
 .Main {
     padding: 0 20px;
+    margin-bottom: 30px;
 }
 
 .SearchResults {
